# MuseVoice

./: .gitignore  .gitmodules  README.md  history.html  index.html  package.json  settings.html  vite.config.ts
src/: App.tsx  UIRoot.tsx  history.tsx  historyMain.tsx  main.ts  main.tsx  settings.tsx  settingsMain.tsx  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: opus_encode.rs  webm_encode.rs
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  audio_output.rs  ebml.rs  encode.rs  flow.rs  flow_manager.rs  lib.rs  opus.rs  stream_processor.rs  transcribe.rs  webm.rs
src/components/: StatusCanvas.tsx
src/hooks/: useBackendListeners.ts
